--- a/pygis/_toc.yml
+++ b/pygis/_toc.yml
@@ -20,19 +20,23 @@
     - file: docs/b_getting_started
     - file: docs/b_python_by_example
     - file: docs/b_learn_more
+
 - part: Data Types
   chapters:
     - file: docs/c_features
     - file: docs/c_store_features
     - file: docs/c_vectors
-
     - file: docs/c_rasters
+
 - part: Nature of Coordinate Systems
   chapters:
     - file: docs/d_crs_what_is_it
     - file: docs/d_vector_crs_intro
     - file: docs/d_raster_crs_intro
     - file: docs/d_exercises
+      sections:
+      - file: docs/d_understand_crs_codes
+
 - part: Basic Operations & Plots
   chapters:
     - file: docs/e_vector_op_intro
