--- a/pygis/_toc.yml
+++ b/pygis/_toc.yml
@@ -34,6 +34,7 @@
     #   sections:
     - file: docs/e_attributes
     - file: docs/e_new_vectors
+    #- file: docs/e_buffer_neighbors
     - file: docs/e_vector_overlay
     - file: docs/e_extraction
     - file: docs/e_spatial_joins
